--- a/css/stats.css
+++ b/css/stats.css
@@ -1,11 +1,11 @@
  .statsBack{
-    background-color: #4b66AF;
+    background-color: #00415b;
     width: 100%;
     background-position: center;
 }
 
 .statistics{
-    background-color: #4b66AF;
+    background-color: #00415b;
     color: white;
     height: 25em !important; 
     padding-top: 1.5em;
