--- a/css/cards.css
+++ b/css/cards.css
@@ -7,6 +7,18 @@
   max-width: none !important;
 }
 
+.tabs-responsive {
+  text-align: center !important;
+  flex-wrap: nowrap;
+}
+
+.card-tabs {
+  width: 10% !important;
+  margin-right: auto; 
+  margin-left: auto; 
+  display: inline;
+}
+
 .card-head {
   margin-top: 1em; 
   text-align: center !important;
@@ -23,8 +35,16 @@
 }
 
 .placeholder {
-  background-color: #4B66A4;
+  background-color: #00C588;
   color: #FFFFFF !important;
+}
+
+.nav-item:hover {
+  background-color: #00C588;
+}
+
+.nav-item:active {
+  background-color: #00C588;
 }
 
 .nav {
@@ -49,6 +69,7 @@
   border-top: 0px !important;
   border-bottom: 0px !important;  
   background-color: #F4F4F4 !important;
+  text-align: center !important;
 }
 
 .pathways-card-text {
@@ -62,10 +83,11 @@
 .know-more-btn {  
   background-color: #CCCCCC; 
   color: #666666; 
-  border: none;
+  border: none;  
 }
+
 .know-more-btn:hover {
-  background-color: #4B66A4;
+  background-color: #00c588;
   color: #FFFFFF; 
 }
 
@@ -83,6 +105,18 @@
     text-align: center !important;
   }
 
+  .card-tabs {
+    width: 100% !important;
+    margin-right: auto; 
+    margin-left: auto; 
+    display: inline;
+  }
+
+  .tabs-responsive {
+    text-align: center !important;
+    flex-wrap: nowrap;
+  }
+
   .lead {
     font-size: 1rem !important;
   }
@@ -93,11 +127,13 @@
 
   #card-1 {
     margin-top: 2em;  
+    padding-bottom: 2em;
     border-bottom: 1px solid rgba(33,33,33,0.15) !important;        
   } 
 
   #card-2, #card-3, #card-4 {
     margin-top: 5px;  
+    padding-bottom: 2em;
     border-bottom: 1px solid rgba(33,33,33,0.15) !important;     
   }
 
