--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,5 @@
 .contact {
-    background-color: #4B66A4;   
+    background-color: #00415b;   
     padding-bottom: 2em; 
 }
 
@@ -18,7 +18,7 @@
     border-bottom: 0 !important;
     border-left: 0 !important;
     border-right: 1px solid rgba(255,255,255,0.25) !important;
-    background-color: #4B66A4;
+    background-color: #00415b;
     color: #FFFFFF;
     border-color: #FFFFFF;
 }
