--- a/css/gallery.css
+++ b/css/gallery.css
@@ -17,7 +17,18 @@
 }
 
 .gallery-title{
-  background-color: #4B66AF;
+  background-color: #00415b;
   padding: 4rem;
   color: #F4F4F4;
+}
+
+.tabs-content-gallery {
+  width: 100% !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  text-align: center !important;
+}
+
+.nav-pill-list{
+  padding-left: 2.7rem;
 }
