--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 .counter {
   height: 18em !important;
-  background-color: #4b66af;
+  background-color: #00415b;
   color: white;
 }
 
@@ -14,7 +14,6 @@
   font-size: 1.3em;
   font-weight: 400;
 }
-
 
 @media only screen and (max-width: 500px) {
   #clock{
