--- a/css/about.css
+++ b/css/about.css
@@ -14,6 +14,10 @@
     margin-top: 2em !important;
   }
 
+  img#main-logo {
+    height: 60px;
+  }
+
   .card-head, .about-lead {
     color: #FFFFFF;
     text-align: center !important;
